<resources>
    <string name="app_name">Barcode Scanner</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="product_name">Name</string>
    <string name="product_price">Price</string>
    <string name="product_barcode">"0000000000"</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="proceed_to_payment">Proceed to Payment</string>
    <string name="product">Product: %s</string>
    <string name="dollar">Price: $ %.2f</string>
    <string name="qty">Qty: %d</string>
    <string name="checkout">Checkout</string>
    <string name="textview">TextView</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="logout">Logout</string>
    <string name="AddProducts">Add Products To Cart</string>
    <string name="subTotal">Sub Total:</string>
    <string name="taxableTotal">Taxable Total:</string>
    <string name="total">Total:</string>
    <string name="sr_no">Sr No.</string>
    <string name="Name">Name</string>
    <string name="Quantity">Quantity</string>
    <string name="Price">Price</string>
    <string name="TotalPrice">Total Price</string>
    <string name="generate_invoice">Invoice</string>
    <string name="home">Home</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="product_quantity">Quantity</string>
    <string name="minus">remove quantity</string>
    <string name="plus">add quantity</string>
</resources>