<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewPaymentDetailsActivity"

    android:layout_margin="8dp">

    <TableRow android:layout_height="70dp">

        <TextView
            android:text="@string/Name"
            android:layout_width="0dp"

            android:layout_weight="0.3"
            android:textSize="12sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:gravity="start"
            android:background="@drawable/table_border"
            android:layout_column="1"/>
        <TextView
            android:text="@string/Quantity"
            android:textSize="12sp"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:textStyle="bold"
            android:padding="10dp"
            android:gravity="center"
            android:background="@drawable/table_border"
            android:layout_column="2"/>
        <TextView
            android:text="@string/Price"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:textSize="12sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:gravity="center"
            android:background="@drawable/table_border"
            android:layout_column="3"/>
        <TextView
            android:text="@string/TotalPrice"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:textSize="11sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:gravity="center"
            android:background="@drawable/table_border"
            android:layout_column="4"/>

    </TableRow>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/products_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp">
        <Button
            android:paddingTop="10dp"
            android:id="@+id/btn_checkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple"
            android:paddingHorizontal="8dp"
            android:text="@string/proceed_to_payment">


        </Button>




    </LinearLayout>

</TableLayout>